# avs-device-sdk

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CONTROL
ACL/include/ACL/: AVSConnectionManager.h
ACL/include/ACL/Transport/: ExchangeHandlerContextInterface.h  HTTP2Transport.h  HTTP2TransportFactory.h  MessageRouter.h  MessageRouterInterface.h  MimeResponseStatusHandlerInterface.h  TransportFactoryInterface.h
ACL/src/: CMakeLists.txt
ACL/src/Transport/: ExchangeHandler.cpp
ACL/test/Transport/: HTTP2TransportTest.cpp  MessageRouterTest.h  MockAuthDelegate.h  MockHTTP2Connection.h  MockHTTP2Request.h  MockMessageRequest.h
ADSL/include/ADSL/: DirectiveProcessor.h
ADSL/test/: DirectiveProcessorTest.cpp  DirectiveRouterTest.cpp  DirectiveSequencerTest.cpp
ADSL/test/ADSL/: MockDirectiveSequencer.h
AFML/include/AFML/: AudioActivityTracker.h  Channel.h
AFML/src/: CMakeLists.txt
AVSCommon/: CMakeLists.txt
AVSCommon/AVS/src/: BlockingPolicy.cpp  CapabilityConfiguration.cpp
AVSCommon/AVS/src/Attachment/: AttachmentManager.cpp
AVSCommon/AVS/test/: CMakeLists.txt  CapabilityAgentTest.cpp  CapabilityConfigurationTest.cpp  NamespaceAndNameTest.cpp
AVSCommon/AVS/test/AVSCommon/AVS/Attachment/: MockAttachmentManager.h
AVSCommon/AVS/test/Attachment/: AttachmentUtilsTest.cpp
AVSCommon/AVS/test/Attachment/Common/: CMakeLists.txt  Common.cpp
AVSCommon/SDKInterfaces/test/: CMakeLists.txt  EqualizerStorageInterfaceTest.cpp
AVSCommon/SDKInterfaces/test/AVSCommon/SDKInterfaces/Storage/: StubMiscStorage.h
AVSCommon/SDKInterfaces/test/Common/: CMakeLists.txt  StubMiscStorage.cpp
AVSCommon/Utils/src/: MacAddressString.cpp  RetryTimer.cpp  UUIDGeneration.cpp
AVSCommon/Utils/src/LibcurlUtils/: LibcurlHTTP2Connection.cpp
AVSCommon/Utils/src/Logger/: LoggerUtils.cpp
AVSCommon/Utils/src/Stream/: StreamFunctions.cpp
AVSCommon/Utils/test/: CMakeLists.txt  HTTPContentTest.cpp  MIMEParserTest.cpp  StreamFunctionsTest.cpp  TimeUtilsTest.cpp  UUIDGenerationTest.cpp
AVSCommon/Utils/test/Common/: CMakeLists.txt  Common.cpp  MockHTTP2MimeRequestEncodeSource.cpp  MockHTTP2MimeResponseDecodeSink.cpp
BluetoothImplementations/BlueZ/include/BlueZ/: BlueZBluetoothDevice.h  BlueZHostController.h  DBusObject.h  DBusObjectBase.h  DBusPropertiesProxy.h  DBusProxy.h  ManagedGError.h  ManagedGVariant.h
BluetoothImplementations/BlueZ/src/: BlueZDeviceManager.cpp  MPRISPlayer.cpp  PairingAgent.cpp  PulseAudioBluetoothInitializer.cpp
CapabilitiesDelegate/include/CapabilitiesDelegate/: CapabilitiesDelegate.h
CapabilitiesDelegate/src/: CMakeLists.txt
CapabilitiesDelegate/test/Common/: TestableAuthDelegate.h  TestableCapabilityProvider.h  TestableHttpPut.h  TestableMiscStorage.h
CapabilityAgents/AIP/include/AIP/: ESPData.h  Initiator.h
CapabilityAgents/AIP/src/: ESPData.cpp
CapabilityAgents/Alerts/include/Alerts/: Alert.h  AlertObserverInterface.h  AlertScheduler.h  AlertsCapabilityAgent.h
CapabilityAgents/Alerts/src/: Alert.cpp
CapabilityAgents/AudioPlayer/include/AudioPlayer/: AudioItem.h
CapabilityAgents/Bluetooth/include/Bluetooth/: Bluetooth.h
CapabilityAgents/DoNotDisturb/include/DoNotDisturbCA/: DNDMessageRequest.h  DNDSettingProtocol.h
CapabilityAgents/ExternalMediaPlayer/include/ExternalMediaPlayer/: ExternalMediaPlayer.h
CapabilityAgents/InteractionModel/include/InteractionModel/: InteractionModelCapabilityAgent.h
CapabilityAgents/InteractionModel/test/: InteractionModelCapabilityAgentTest.cpp
CapabilityAgents/MRM/include/MRM/: MRMCapabilityAgent.h  MRMHandlerInterface.h
CapabilityAgents/Notifications/include/Notifications/: NotificationIndicator.h  NotificationRendererInterface.h  NotificationsCapabilityAgentState.h
CapabilityAgents/PlaybackController/include/PlaybackController/: PlaybackCommand.h  (+1 more)
CapabilityAgents/PlaybackController/src/: PlaybackRouter.cpp
CapabilityAgents/PlaybackController/test/: CMakeLists.txt
CapabilityAgents/Settings/test/: CMakeLists.txt
CapabilityAgents/System/a4btest/: CMakeLists.txt
CapabilityAgents/System/src/: EndpointHandler.cpp  RevokeAuthorizationHandler.cpp  SoftwareInfoSendRequest.cpp  SoftwareInfoSender.cpp
CapabilityAgents/System/test/: SoftwareInfoTest.cpp
CapabilityAgents/TemplateRuntime/test/: CMakeLists.txt
CertifiedSender/include/CertifiedSender/: MessageStorageInterface.h
CertifiedSender/test/: CMakeLists.txt
CertifiedSender/test/Common/: CMakeLists.txt
ContextManager/src/: ContextManager.cpp
ESP/include/ESP/: DummyESPDataProvider.h  ESPDataModifierInterface.h
Integration/include/Integration/: ACLTestContext.h  AuthDelegateTestContext.h  JsonHeader.h  SDKTestContext.h  TestAlertObserver.h  TestDirectiveHandler.h  TestExceptionEncounteredSender.h  TestMediaPlayer.h  TestMessageSender.h
Integration/test/: AlertsIntegrationTest.cpp  AlexaDirectiveSequencerLibraryTest.cpp  AudioInputProcessorIntegrationTest.cpp  AudioPlayerIntegrationTest.cpp  CMakeLists.txt  SpeechSynthesizerIntegrationTest.cpp
KWD/KittAi/test/: KittAiKeyWordDetectorTest.cpp
KWD/Sensory/test/: SensoryKeywordDetectorTest.cpp
MediaPlayer/AndroidSLESMediaPlayer/src/: AndroidSLESMediaPlayer.cpp  FFmpegAttachmentInputController.cpp
PlaylistParser/include/PlaylistParser/: ContentDecrypter.h  M3UParser.h  PlaylistUtils.h
PlaylistParser/src/: CMakeLists.txt  M3UParser.cpp
PlaylistParser/test/: ContentDecrypterTest.cpp  M3UParserTest.cpp  PlaylistUtilsTest.cpp
PlaylistParser/test/PlaylistParser/: MockContentFetcher.h
SampleApp/include/SampleApp/: ConsolePrinter.h  GuiRenderer.h  KeywordObserver.h
SampleApp/src/: PortAudioMicrophoneWrapper.cpp  main.cpp
Settings/include/Settings/: DeviceSettingsManager.h  Setting.h  SettingEventMetadata.h  SettingEventSenderInterface.h  SettingInterface.h  SettingProtocolInterface.h  SettingStringConversion.h
Settings/test/: SettingStringConversionTest.cpp  SettingTest.cpp  SettingsManagerTest.cpp
Settings/test/Settings/: MockSetting.h  MockSettingProtocol.h
Storage/: CMakeLists.txt
Storage/SQLiteStorage/src/: CMakeLists.txt
tools/: Testing.cmake
(+113 files in other folders)
